Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20349,7 +20349,9 @@
       "count: 58\tCoord: [ 0.6 -0.8]\t\tAcc: 10.227272727272727\tLoss: 36.405\n",
       "count: 60\tCoord: [ 0.8 -0.8]\t\tAcc: 10.298295454545455\tLoss: 30.981\n",
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 9.801136363636363\tLoss: 25.666\n",
-      "Coord: [-1.  -0.7]\tAcc: 11\tLoss: 49.986\r"
+      "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 9.872159090909092\tLoss: 47.026\n",
+      "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 8.735795454545455\tLoss: 37.983\n",
+      "Coord: [-0.6 -0.7]\tAcc: 10\tLoss: 32.521\r"
      ]
     }
    ],
