Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20287,7 +20287,11 @@
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 10.582386363636363\tLoss: 24.718\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 9.446022727272727\tLoss: 23.727\n",
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 8.451704545454545\tLoss: 18.638\n",
-      "Coord: [ 0.1 -0.6]\tAcc: 14\tLoss: 17.075\r"
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 9.090909090909092\tLoss: 20.854\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 10.511363636363637\tLoss: 35.932\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 10.511363636363637\tLoss: 85.701\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.085227272727273\tLoss: 221.677\n",
+      "Coord: [ 0.9 -0.6]\tAcc: 10\tLoss: 338.473\r"
      ]
     }
    ],
