Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20385,7 +20385,15 @@
       "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 13.778409090909092\tLoss: 61.28\n",
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 14.630681818181818\tLoss: 49.42\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 11.789772727272727\tLoss: 51.36\n",
-      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 10.653409090909092\tLoss: 46.863\n"
+      "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 10.653409090909092\tLoss: 46.863\n",
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 11.150568181818182\tLoss: 62.547\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 9.375\tLoss: 135.249\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 11.292613636363637\tLoss: 475.249\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.511363636363637\tLoss: 1675.311\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.440340909090908\tLoss: 4971.993\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 13.068181818181818\tLoss: 56.17\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 13.494318181818182\tLoss: 39.827\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 13.778409090909092\tLoss: 25.879\n"
      ]
     }
    ],
