--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20351,7 +20351,9 @@
       "count: 62\tCoord: [ 1.  -0.8]\t\tAcc: 9.801136363636363\tLoss: 25.666\n",
       "count: 64\tCoord: [-0.9 -0.7]\t\tAcc: 9.872159090909092\tLoss: 47.026\n",
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 8.735795454545455\tLoss: 37.983\n",
-      "Coord: [-0.6 -0.7]\tAcc: 10\tLoss: 32.521\r"
+      "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 9.801136363636363\tLoss: 32.235\n",
+      "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 9.375\tLoss: 34.289\n",
+      "Coord: [-0.1 -0.7]\tAcc: 15\tLoss: 44.636\r"
      ]
     }
    ],
