Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20291,7 +20291,11 @@
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 10.511363636363637\tLoss: 35.932\n",
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 10.511363636363637\tLoss: 85.701\n",
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.085227272727273\tLoss: 221.677\n",
-      "Coord: [ 0.9 -0.6]\tAcc: 10\tLoss: 338.473\r"
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 9.943181818181818\tLoss: 542.149\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 12.997159090909092\tLoss: 28.24\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 13.565340909090908\tLoss: 33.513\n",
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 13.778409090909092\tLoss: 25.128\n",
+      "Coord: [-0.4 -0.5]\tAcc: 16\tLoss: 19.332\r"
      ]
     }
    ],
