--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20353,7 +20353,9 @@
       "count: 66\tCoord: [-0.7 -0.7]\t\tAcc: 8.735795454545455\tLoss: 37.983\n",
       "count: 68\tCoord: [-0.5 -0.7]\t\tAcc: 9.801136363636363\tLoss: 32.235\n",
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 9.375\tLoss: 34.289\n",
-      "Coord: [-0.1 -0.7]\tAcc: 15\tLoss: 44.636\r"
+      "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 9.446022727272727\tLoss: 47.094\n",
+      "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 10.227272727272727\tLoss: 59.047\n",
+      "Coord: [ 0.3 -0.7]\tAcc: 10\tLoss: 56.656\r"
      ]
     }
    ],
