Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20355,7 +20355,9 @@
       "count: 70\tCoord: [-0.3 -0.7]\t\tAcc: 9.375\tLoss: 34.289\n",
       "count: 72\tCoord: [-0.1 -0.7]\t\tAcc: 9.446022727272727\tLoss: 47.094\n",
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 10.227272727272727\tLoss: 59.047\n",
-      "Coord: [ 0.3 -0.7]\tAcc: 10\tLoss: 56.656\r"
+      "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 10.369318181818182\tLoss: 54.273\n",
+      "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 10.369318181818182\tLoss: 45.182\n",
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.369318181818182\tLoss: 37.05\n"
      ]
     }
    ],
