Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20295,7 +20295,11 @@
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 12.997159090909092\tLoss: 28.24\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 13.565340909090908\tLoss: 33.513\n",
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 13.778409090909092\tLoss: 25.128\n",
-      "Coord: [-0.4 -0.5]\tAcc: 16\tLoss: 19.332\r"
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 11.079545454545455\tLoss: 18.907\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 8.948863636363637\tLoss: 16.043\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 10.298295454545455\tLoss: 14.052\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 11.363636363636363\tLoss: 18.689\n",
+      "Coord: [ 0.4 -0.5]\tAcc: 17\tLoss: 25.462\r"
      ]
     }
    ],
