--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20393,7 +20393,15 @@
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.440340909090908\tLoss: 4971.993\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 13.068181818181818\tLoss: 56.17\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 13.494318181818182\tLoss: 39.827\n",
-      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 13.778409090909092\tLoss: 25.879\n"
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 13.778409090909092\tLoss: 25.879\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 12.357954545454545\tLoss: 19.322\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 11.434659090909092\tLoss: 19.767\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 12.357954545454545\tLoss: 27.234\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 13.068181818181818\tLoss: 62.803\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 12.642045454545455\tLoss: 238.486\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 10.724431818181818\tLoss: 916.466\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.440340909090908\tLoss: 2892.341\n",
+      "Coord: [ 1.  -0.5]\tAcc: 27\tLoss: 4440.158\r"
      ]
     }
    ],
