--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20357,7 +20357,9 @@
       "count: 74\tCoord: [ 0.1 -0.7]\t\tAcc: 10.227272727272727\tLoss: 59.047\n",
       "count: 76\tCoord: [ 0.3 -0.7]\t\tAcc: 10.369318181818182\tLoss: 54.273\n",
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 10.369318181818182\tLoss: 45.182\n",
-      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.369318181818182\tLoss: 37.05\n"
+      "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.369318181818182\tLoss: 37.05\n",
+      "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.085227272727273\tLoss: 30.516\n",
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 9.303977272727273\tLoss: 59.633\n"
      ]
     }
    ],
