--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20299,7 +20299,11 @@
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 8.948863636363637\tLoss: 16.043\n",
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 10.298295454545455\tLoss: 14.052\n",
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 11.363636363636363\tLoss: 18.689\n",
-      "Coord: [ 0.4 -0.5]\tAcc: 17\tLoss: 25.462\r"
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 12.002840909090908\tLoss: 39.517\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 11.150568181818182\tLoss: 106.78\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.227272727272727\tLoss: 280.094\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 12.144886363636363\tLoss: 22.786\n",
+      "Coord: [-0.9 -0.4]\tAcc: 20\tLoss: 26.494\r"
      ]
     }
    ],
