--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20359,7 +20359,9 @@
       "count: 78\tCoord: [ 0.5 -0.7]\t\tAcc: 10.369318181818182\tLoss: 45.182\n",
       "count: 80\tCoord: [ 0.7 -0.7]\t\tAcc: 10.369318181818182\tLoss: 37.05\n",
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.085227272727273\tLoss: 30.516\n",
-      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 9.303977272727273\tLoss: 59.633\n"
+      "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 9.303977272727273\tLoss: 59.633\n",
+      "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 9.730113636363637\tLoss: 54.115\n",
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 9.730113636363637\tLoss: 50.803\n"
      ]
     }
    ],
