Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20361,7 +20361,9 @@
       "count: 82\tCoord: [ 0.9 -0.7]\t\tAcc: 10.085227272727273\tLoss: 30.516\n",
       "count: 84\tCoord: [-1.  -0.6]\t\tAcc: 9.303977272727273\tLoss: 59.633\n",
       "count: 86\tCoord: [-0.8 -0.6]\t\tAcc: 9.730113636363637\tLoss: 54.115\n",
-      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 9.730113636363637\tLoss: 50.803\n"
+      "count: 88\tCoord: [-0.6 -0.6]\t\tAcc: 9.730113636363637\tLoss: 50.803\n",
+      "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 8.735795454545455\tLoss: 54.16\n",
+      "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 8.664772727272727\tLoss: 67.376\n"
      ]
     }
    ],
