--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20303,7 +20303,11 @@
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 11.150568181818182\tLoss: 106.78\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.227272727272727\tLoss: 280.094\n",
       "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 12.144886363636363\tLoss: 22.786\n",
-      "Coord: [-0.9 -0.4]\tAcc: 20\tLoss: 26.494\r"
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 13.707386363636363\tLoss: 29.365\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 14.84375\tLoss: 23.186\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 13.707386363636363\tLoss: 14.121\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 11.221590909090908\tLoss: 11.109\n",
+      "Coord: [-0.1 -0.4]\tAcc: 12\tLoss: 9.3859\r"
      ]
     }
    ],
