Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20401,7 +20401,15 @@
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 12.642045454545455\tLoss: 238.486\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 10.724431818181818\tLoss: 916.466\n",
       "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.440340909090908\tLoss: 2892.341\n",
-      "Coord: [ 1.  -0.5]\tAcc: 27\tLoss: 4440.158\r"
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 14.488636363636363\tLoss: 30.175\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 13.991477272727273\tLoss: 18.115\n",
+      "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 14.84375\tLoss: 8.254\n",
+      "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 14.204545454545455\tLoss: 5.759\n",
+      "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 13.991477272727273\tLoss: 5.727\n",
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 16.619318181818183\tLoss: 8.951\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 16.335227272727273\tLoss: 28.265\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 13.565340909090908\tLoss: 123.482\n",
+      "Coord: [ 0.5 -0.4]\tAcc: 30\tLoss: 246.358\r"
      ]
     }
    ],
