Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20307,7 +20307,10 @@
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 14.84375\tLoss: 23.186\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 13.707386363636363\tLoss: 14.121\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 11.221590909090908\tLoss: 11.109\n",
-      "Coord: [-0.1 -0.4]\tAcc: 12\tLoss: 9.3859\r"
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 11.789772727272727\tLoss: 9.575\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 12.144886363636363\tLoss: 10.685\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 16.335227272727273\tLoss: 17.928\n",
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.707386363636363\tLoss: 48.216\n"
      ]
     }
    ],
