--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20365,7 +20365,9 @@
       "count: 90\tCoord: [-0.4 -0.6]\t\tAcc: 8.735795454545455\tLoss: 54.16\n",
       "count: 92\tCoord: [-0.2 -0.6]\t\tAcc: 8.664772727272727\tLoss: 67.376\n",
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 10.085227272727273\tLoss: 77.484\n",
-      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 10.369318181818182\tLoss: 70.018\n"
+      "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 10.369318181818182\tLoss: 70.018\n",
+      "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 10.369318181818182\tLoss: 54.381\n",
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 10.227272727272727\tLoss: 43.15\n"
      ]
     }
    ],
