--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20367,7 +20367,9 @@
       "count: 94\tCoord: [ 0.  -0.6]\t\tAcc: 10.085227272727273\tLoss: 77.484\n",
       "count: 96\tCoord: [ 0.2 -0.6]\t\tAcc: 10.369318181818182\tLoss: 70.018\n",
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 10.369318181818182\tLoss: 54.381\n",
-      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 10.227272727272727\tLoss: 43.15\n"
+      "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 10.227272727272727\tLoss: 43.15\n",
+      "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.440340909090908\tLoss: 36.398\n",
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.582386363636363\tLoss: 32.899\n"
      ]
     }
    ],
