Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20310,7 +20310,11 @@
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 11.789772727272727\tLoss: 9.575\n",
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 12.144886363636363\tLoss: 10.685\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 16.335227272727273\tLoss: 17.928\n",
-      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.707386363636363\tLoss: 48.216\n"
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 13.707386363636363\tLoss: 48.216\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 11.789772727272727\tLoss: 139.68\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.440340909090908\tLoss: 373.003\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 10.511363636363637\tLoss: 16.673\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 12.926136363636363\tLoss: 12.501\n"
      ]
     }
    ],
