Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20409,7 +20409,15 @@
       "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 16.619318181818183\tLoss: 8.951\n",
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 16.335227272727273\tLoss: 28.265\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 13.565340909090908\tLoss: 123.482\n",
-      "Coord: [ 0.5 -0.4]\tAcc: 30\tLoss: 246.358\r"
+      "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 11.647727272727273\tLoss: 493.493\n",
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 11.079545454545455\tLoss: 1616.912\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.866477272727273\tLoss: 4545.631\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 15.198863636363637\tLoss: 6.087\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 13.139204545454545\tLoss: 5.186\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 12.215909090909092\tLoss: 3.982\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 14.84375\tLoss: 3.047\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 22.017045454545453\tLoss: 3.365\n",
+      "Coord: [ 0.  -0.3]\tAcc: 26\tLoss: 5.808\r"
      ]
     }
    ],
