--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20369,7 +20369,10 @@
       "count: 98\tCoord: [ 0.4 -0.6]\t\tAcc: 10.369318181818182\tLoss: 54.381\n",
       "count: 100\tCoord: [ 0.6 -0.6]\t\tAcc: 10.227272727272727\tLoss: 43.15\n",
       "count: 102\tCoord: [ 0.8 -0.6]\t\tAcc: 10.440340909090908\tLoss: 36.398\n",
-      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.582386363636363\tLoss: 32.899\n"
+      "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.582386363636363\tLoss: 32.899\n",
+      "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 9.730113636363637\tLoss: 77.768\n",
+      "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 9.801136363636363\tLoss: 70.494\n",
+      "Coord: [-0.6 -0.5]\tAcc: 17\tLoss: 53.77\r"
      ]
     }
    ],
