Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20314,7 +20314,11 @@
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 11.789772727272727\tLoss: 139.68\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.440340909090908\tLoss: 373.003\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 10.511363636363637\tLoss: 16.673\n",
-      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 12.926136363636363\tLoss: 12.501\n"
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 12.926136363636363\tLoss: 12.501\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 15.909090909090908\tLoss: 7.905\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 15.553977272727273\tLoss: 5.956\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 14.701704545454545\tLoss: 5.768\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 19.460227272727273\tLoss: 5.958\n"
      ]
     }
    ],
