--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20372,7 +20372,8 @@
       "count: 104\tCoord: [ 1.  -0.6]\t\tAcc: 10.582386363636363\tLoss: 32.899\n",
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 9.730113636363637\tLoss: 77.768\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 9.801136363636363\tLoss: 70.494\n",
-      "Coord: [-0.6 -0.5]\tAcc: 17\tLoss: 53.77\r"
+      "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 7.528409090909091\tLoss: 61.23\n",
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 7.03125\tLoss: 63.209\n"
      ]
     }
    ],
