--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20373,7 +20373,9 @@
       "count: 106\tCoord: [-0.9 -0.5]\t\tAcc: 9.730113636363637\tLoss: 77.768\n",
       "count: 108\tCoord: [-0.7 -0.5]\t\tAcc: 9.801136363636363\tLoss: 70.494\n",
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 7.528409090909091\tLoss: 61.23\n",
-      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 7.03125\tLoss: 63.209\n"
+      "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 7.03125\tLoss: 63.209\n",
+      "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 8.238636363636363\tLoss: 65.018\n",
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 10.085227272727273\tLoss: 68.837\n"
      ]
     }
    ],
