Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20318,7 +20318,11 @@
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 15.909090909090908\tLoss: 7.905\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 15.553977272727273\tLoss: 5.956\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 14.701704545454545\tLoss: 5.768\n",
-      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 19.460227272727273\tLoss: 5.958\n"
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 19.460227272727273\tLoss: 5.958\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 25.355113636363637\tLoss: 8.1\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 23.011363636363637\tLoss: 21.378\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 16.477272727272727\tLoss: 73.264\n",
+      "Coord: [ 0.8 -0.3]\tAcc: 13\tLoss: 130.908\r"
      ]
     }
    ],
