--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20417,7 +20417,14 @@
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 12.215909090909092\tLoss: 3.982\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 14.84375\tLoss: 3.047\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 22.017045454545453\tLoss: 3.365\n",
-      "Coord: [ 0.  -0.3]\tAcc: 26\tLoss: 5.808\r"
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 21.09375\tLoss: 11.532\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 16.619318181818183\tLoss: 54.763\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 13.565340909090908\tLoss: 229.279\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.931818181818182\tLoss: 802.196\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 10.9375\tLoss: 2361.424\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 13.210227272727273\tLoss: 3.434\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 10.795454545454545\tLoss: 3.295\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 11.576704545454545\tLoss: 3.15\n"
      ]
     }
    ],
