Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20375,7 +20375,9 @@
       "count: 110\tCoord: [-0.5 -0.5]\t\tAcc: 7.528409090909091\tLoss: 61.23\n",
       "count: 112\tCoord: [-0.3 -0.5]\t\tAcc: 7.03125\tLoss: 63.209\n",
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 8.238636363636363\tLoss: 65.018\n",
-      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 10.085227272727273\tLoss: 68.837\n"
+      "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 10.085227272727273\tLoss: 68.837\n",
+      "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 10.369318181818182\tLoss: 60.224\n",
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 10.440340909090908\tLoss: 48.192\n"
      ]
     }
    ],
