Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20377,7 +20377,9 @@
       "count: 114\tCoord: [-0.1 -0.5]\t\tAcc: 8.238636363636363\tLoss: 65.018\n",
       "count: 116\tCoord: [ 0.1 -0.5]\t\tAcc: 10.085227272727273\tLoss: 68.837\n",
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 10.369318181818182\tLoss: 60.224\n",
-      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 10.440340909090908\tLoss: 48.192\n"
+      "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 10.440340909090908\tLoss: 48.192\n",
+      "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 10.511363636363637\tLoss: 42.374\n",
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.440340909090908\tLoss: 39.791\n"
      ]
     }
    ],
