--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20322,7 +20322,11 @@
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 25.355113636363637\tLoss: 8.1\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 23.011363636363637\tLoss: 21.378\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 16.477272727272727\tLoss: 73.264\n",
-      "Coord: [ 0.8 -0.3]\tAcc: 13\tLoss: 130.908\r"
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 12.286931818181818\tLoss: 225.184\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 9.446022727272727\tLoss: 9.066\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 10.653409090909092\tLoss: 8.041\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 11.434659090909092\tLoss: 7.449\n",
+      "Coord: [-0.5 -0.2]\tAcc: 13\tLoss: 6.031\r"
      ]
     }
    ],
