--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20379,7 +20379,9 @@
       "count: 118\tCoord: [ 0.3 -0.5]\t\tAcc: 10.369318181818182\tLoss: 60.224\n",
       "count: 120\tCoord: [ 0.5 -0.5]\t\tAcc: 10.440340909090908\tLoss: 48.192\n",
       "count: 122\tCoord: [ 0.7 -0.5]\t\tAcc: 10.511363636363637\tLoss: 42.374\n",
-      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.440340909090908\tLoss: 39.791\n"
+      "count: 124\tCoord: [ 0.9 -0.5]\t\tAcc: 10.440340909090908\tLoss: 39.791\n",
+      "count: 126\tCoord: [-1.  -0.4]\t\tAcc: 10.653409090909092\tLoss: 71.833\n",
+      "count: 128\tCoord: [-0.8 -0.4]\t\tAcc: 9.303977272727273\tLoss: 63.546\n"
      ]
     }
    ],
