Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20326,7 +20326,10 @@
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 9.446022727272727\tLoss: 9.066\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 10.653409090909092\tLoss: 8.041\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 11.434659090909092\tLoss: 7.449\n",
-      "Coord: [-0.5 -0.2]\tAcc: 13\tLoss: 6.031\r"
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 13.849431818181818\tLoss: 5.002\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 20.02840909090909\tLoss: 4.598\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 35.22727272727273\tLoss: 3.443\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 54.33238636363637\tLoss: 2.973\n"
      ]
     }
    ],
