Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20424,7 +20424,14 @@
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 10.9375\tLoss: 2361.424\n",
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 13.210227272727273\tLoss: 3.434\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 10.795454545454545\tLoss: 3.295\n",
-      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 11.576704545454545\tLoss: 3.15\n"
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 11.576704545454545\tLoss: 3.15\n",
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 15.056818181818182\tLoss: 2.728\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 28.90625\tLoss: 2.208\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 35.29829545454545\tLoss: 3.4\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 29.261363636363637\tLoss: 15.908\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 23.4375\tLoss: 75.462\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 17.400568181818183\tLoss: 296.642\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 14.133522727272727\tLoss: 978.68\n"
      ]
     }
    ],
