Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20329,7 +20329,11 @@
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 13.849431818181818\tLoss: 5.002\n",
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 20.02840909090909\tLoss: 4.598\n",
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 35.22727272727273\tLoss: 3.443\n",
-      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 54.33238636363637\tLoss: 2.973\n"
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 54.33238636363637\tLoss: 2.973\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 43.60795454545455\tLoss: 9.017\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 25.355113636363637\tLoss: 40.362\n",
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 15.340909090909092\tLoss: 148.586\n",
+      "Coord: [ 0.9 -0.2]\tAcc: 14\tLoss: 279.372\r"
      ]
     }
    ],
