Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20385,7 +20385,9 @@
       "count: 130\tCoord: [-0.6 -0.4]\t\tAcc: 7.599431818181818\tLoss: 49.662\n",
       "count: 132\tCoord: [-0.4 -0.4]\t\tAcc: 5.965909090909091\tLoss: 43.291\n",
       "count: 134\tCoord: [-0.2 -0.4]\t\tAcc: 7.954545454545454\tLoss: 35.53\n",
-      "Coord: [ 0.  -0.4]\tAcc: 6\tLoss: 37.8432\r"
+      "count: 136\tCoord: [ 0.  -0.4]\t\tAcc: 9.303977272727273\tLoss: 33.697\n",
+      "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 11.008522727272727\tLoss: 44.913\n",
+      "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 10.866477272727273\tLoss: 46.496\n"
      ]
     }
    ],
