Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20333,7 +20333,11 @@
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 43.60795454545455\tLoss: 9.017\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 25.355113636363637\tLoss: 40.362\n",
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 15.340909090909092\tLoss: 148.586\n",
-      "Coord: [ 0.9 -0.2]\tAcc: 14\tLoss: 279.372\r"
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 12.713068181818182\tLoss: 459.699\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 10.795454545454545\tLoss: 10.996\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 10.724431818181818\tLoss: 12.235\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 11.079545454545455\tLoss: 10.337\n",
+      "Coord: [-0.4 -0.1]\tAcc: 10\tLoss: 7.412\r"
      ]
     }
    ],
