--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20431,7 +20431,15 @@
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 29.261363636363637\tLoss: 15.908\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 23.4375\tLoss: 75.462\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 17.400568181818183\tLoss: 296.642\n",
-      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 14.133522727272727\tLoss: 978.68\n"
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 14.133522727272727\tLoss: 978.68\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 12.571022727272727\tLoss: 2721.315\n",
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 11.363636363636363\tLoss: 2.57\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 12.286931818181818\tLoss: 2.733\n",
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 14.275568181818182\tLoss: 2.558\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 37.35795454545455\tLoss: 1.959\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 74.36079545454545\tLoss: 0.822\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 76.42045454545455\tLoss: 1.391\n",
+      "Coord: [ 0.2 -0.1]\tAcc: 89\tLoss: 3.804\r"
      ]
     }
    ],
