Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20337,7 +20337,11 @@
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 10.795454545454545\tLoss: 10.996\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 10.724431818181818\tLoss: 12.235\n",
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 11.079545454545455\tLoss: 10.337\n",
-      "Coord: [-0.4 -0.1]\tAcc: 10\tLoss: 7.412\r"
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 18.394886363636363\tLoss: 5.968\n",
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 57.38636363636363\tLoss: 1.973\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 87.5\tLoss: 0.494\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 71.3778409090909\tLoss: 3.052\n",
+      "Coord: [ 0.4 -0.1]\tAcc: 68\tLoss: 8.0216\r"
      ]
     }
    ],
