--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -426,9 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# ==== Train the Network & Get Converged Weights ===="
    ]
@@ -445,7 +443,6 @@
      6,
      34
     ],
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -823,8 +820,7 @@
     "ExecuteTime": {
      "end_time": "2019-05-04T02:02:13.273732Z",
      "start_time": "2019-05-04T02:02:12.773738Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -873,8 +869,7 @@
     "code_folding": [
      1,
      13
-    ],
-    "hidden": true
+    ]
    },
    "outputs": [],
    "source": [
@@ -953,8 +948,7 @@
     "ExecuteTime": {
      "end_time": "2019-05-04T02:02:15.431383Z",
      "start_time": "2019-05-04T02:02:15.411877Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -987,8 +981,7 @@
     "ExecuteTime": {
      "end_time": "2019-05-04T02:02:16.654528Z",
      "start_time": "2019-05-04T02:02:16.600464Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -20389,7 +20382,9 @@
       "count: 138\tCoord: [ 0.2 -0.4]\t\tAcc: 11.008522727272727\tLoss: 44.913\n",
       "count: 140\tCoord: [ 0.4 -0.4]\t\tAcc: 10.866477272727273\tLoss: 46.496\n",
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 11.008522727272727\tLoss: 43.854\n",
-      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 10.866477272727273\tLoss: 42.659\n"
+      "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 10.866477272727273\tLoss: 42.659\n",
+      "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.511363636363637\tLoss: 42.441\n",
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 11.576704545454545\tLoss: 36.498\n"
      ]
     }
    ],
