Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20384,7 +20384,9 @@
       "count: 142\tCoord: [ 0.6 -0.4]\t\tAcc: 11.008522727272727\tLoss: 43.854\n",
       "count: 144\tCoord: [ 0.8 -0.4]\t\tAcc: 10.866477272727273\tLoss: 42.659\n",
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.511363636363637\tLoss: 42.441\n",
-      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 11.576704545454545\tLoss: 36.498\n"
+      "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 11.576704545454545\tLoss: 36.498\n",
+      "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 9.730113636363637\tLoss: 24.332\n",
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 9.872159090909092\tLoss: 17.8\n"
      ]
     }
    ],
