--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20341,7 +20341,10 @@
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 57.38636363636363\tLoss: 1.973\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 87.5\tLoss: 0.494\n",
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 71.3778409090909\tLoss: 3.052\n",
-      "Coord: [ 0.4 -0.1]\tAcc: 68\tLoss: 8.0216\r"
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 42.82670454545455\tLoss: 20.962\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 25.213068181818183\tLoss: 96.518\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 16.477272727272727\tLoss: 334.585\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 11.221590909090908\tLoss: 21.525\n"
      ]
     }
    ],
