Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20439,7 +20439,15 @@
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 37.35795454545455\tLoss: 1.959\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 74.36079545454545\tLoss: 0.822\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 76.42045454545455\tLoss: 1.391\n",
-      "Coord: [ 0.2 -0.1]\tAcc: 89\tLoss: 3.804\r"
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 61.22159090909091\tLoss: 11.993\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 46.16477272727273\tLoss: 67.299\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 34.80113636363637\tLoss: 275.377\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 26.207386363636363\tLoss: 912.058\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 14.84375\tLoss: 2.686\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 12.357954545454545\tLoss: 2.678\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 18.394886363636363\tLoss: 2.362\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 37.57102272727273\tLoss: 1.955\n",
+      "Coord: [-0.3  0. ]\tAcc: 76\tLoss: 1.347\r"
      ]
     }
    ],
