Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20386,7 +20386,9 @@
       "count: 146\tCoord: [ 1.  -0.4]\t\tAcc: 10.511363636363637\tLoss: 42.441\n",
       "count: 148\tCoord: [-0.9 -0.3]\t\tAcc: 11.576704545454545\tLoss: 36.498\n",
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 9.730113636363637\tLoss: 24.332\n",
-      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 9.872159090909092\tLoss: 17.8\n"
+      "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 9.872159090909092\tLoss: 17.8\n",
+      "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 11.931818181818182\tLoss: 13.209\n",
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 15.980113636363637\tLoss: 10.408\n"
      ]
     }
    ],
