Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20388,7 +20388,9 @@
       "count: 150\tCoord: [-0.7 -0.3]\t\tAcc: 9.730113636363637\tLoss: 24.332\n",
       "count: 152\tCoord: [-0.5 -0.3]\t\tAcc: 9.872159090909092\tLoss: 17.8\n",
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 11.931818181818182\tLoss: 13.209\n",
-      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 15.980113636363637\tLoss: 10.408\n"
+      "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 15.980113636363637\tLoss: 10.408\n",
+      "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 18.75\tLoss: 17.511\n",
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 15.625\tLoss: 29.372\n"
      ]
     }
    ],
