--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20344,7 +20344,11 @@
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 42.82670454545455\tLoss: 20.962\n",
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 25.213068181818183\tLoss: 96.518\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 16.477272727272727\tLoss: 334.585\n",
-      "count: 210\tCoord: [-1.  0.]\t\tAcc: 11.221590909090908\tLoss: 21.525\n"
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 11.221590909090908\tLoss: 21.525\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 11.079545454545455\tLoss: 23.794\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 11.221590909090908\tLoss: 26.3\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 15.127840909090908\tLoss: 14.633\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 67.4715909090909\tLoss: 1.914\n"
      ]
     }
    ],
