Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20390,7 +20390,9 @@
       "count: 154\tCoord: [-0.3 -0.3]\t\tAcc: 11.931818181818182\tLoss: 13.209\n",
       "count: 156\tCoord: [-0.1 -0.3]\t\tAcc: 15.980113636363637\tLoss: 10.408\n",
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 18.75\tLoss: 17.511\n",
-      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 15.625\tLoss: 29.372\n"
+      "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 15.625\tLoss: 29.372\n",
+      "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 13.423295454545455\tLoss: 32.456\n",
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.931818181818182\tLoss: 34.499\n"
      ]
     }
    ],
