Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20348,7 +20348,11 @@
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 11.079545454545455\tLoss: 23.794\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 11.221590909090908\tLoss: 26.3\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 15.127840909090908\tLoss: 14.633\n",
-      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 67.4715909090909\tLoss: 1.914\n"
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 67.4715909090909\tLoss: 1.914\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 89.41761363636364\tLoss: 0.866\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 61.07954545454545\tLoss: 12.539\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 39.70170454545455\tLoss: 64.8\n"
      ]
     }
    ],
