Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20447,7 +20447,15 @@
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 12.357954545454545\tLoss: 2.678\n",
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 18.394886363636363\tLoss: 2.362\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 37.57102272727273\tLoss: 1.955\n",
-      "Coord: [-0.3  0. ]\tAcc: 76\tLoss: 1.347\r"
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 86.93181818181819\tLoss: 0.486\n",
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 99.28977272727273\tLoss: 0.028\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 91.6903409090909\tLoss: 1.116\n",
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 73.4375\tLoss: 18.857\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 58.09659090909091\tLoss: 107.911\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 44.81534090909091\tLoss: 409.421\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 36.36363636363637\tLoss: 1244.682\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 13.28125\tLoss: 3.136\n",
+      "Coord: [-0.8  0.1]\tAcc: 24\tLoss: 2.826\r"
      ]
     }
    ],
