--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20392,7 +20392,9 @@
       "count: 158\tCoord: [ 0.1 -0.3]\t\tAcc: 18.75\tLoss: 17.511\n",
       "count: 160\tCoord: [ 0.3 -0.3]\t\tAcc: 15.625\tLoss: 29.372\n",
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 13.423295454545455\tLoss: 32.456\n",
-      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.931818181818182\tLoss: 34.499\n"
+      "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.931818181818182\tLoss: 34.499\n",
+      "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 11.150568181818182\tLoss: 36.619\n",
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.15625\tLoss: 18.101\n"
      ]
     }
    ],
