Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20352,7 +20352,11 @@
       "count: 220\tCoord: [0. 0.]\t\tAcc: 99.21875\tLoss: 0.027\n",
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 89.41761363636364\tLoss: 0.866\n",
       "count: 224\tCoord: [0.4 0. ]\t\tAcc: 61.07954545454545\tLoss: 12.539\n",
-      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 39.70170454545455\tLoss: 64.8\n"
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 39.70170454545455\tLoss: 64.8\n",
+      "count: 228\tCoord: [0.8 0. ]\t\tAcc: 25.994318181818183\tLoss: 243.267\n",
+      "count: 230\tCoord: [1. 0.]\t\tAcc: 18.25284090909091\tLoss: 749.472\n",
+      "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.227272727272727\tLoss: 60.523\n",
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 11.008522727272727\tLoss: 64.372\n"
      ]
     }
    ],
