--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20394,7 +20394,10 @@
       "count: 162\tCoord: [ 0.5 -0.3]\t\tAcc: 13.423295454545455\tLoss: 32.456\n",
       "count: 164\tCoord: [ 0.7 -0.3]\t\tAcc: 11.931818181818182\tLoss: 34.499\n",
       "count: 166\tCoord: [ 0.9 -0.3]\t\tAcc: 11.150568181818182\tLoss: 36.619\n",
-      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.15625\tLoss: 18.101\n"
+      "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.15625\tLoss: 18.101\n",
+      "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 11.71875\tLoss: 13.401\n",
+      "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 12.642045454545455\tLoss: 8.015\n",
+      "Coord: [-0.5 -0.2]\tAcc: 13\tLoss: 7.426\r"
      ]
     }
    ],
