Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20455,7 +20455,20 @@
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 44.81534090909091\tLoss: 409.421\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 36.36363636363637\tLoss: 1244.682\n",
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 13.28125\tLoss: 3.136\n",
-      "Coord: [-0.8  0.1]\tAcc: 24\tLoss: 2.826\r"
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 17.96875\tLoss: 3.123\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 27.556818181818183\tLoss: 2.902\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 62.64204545454545\tLoss: 2.145\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 79.4034090909091\tLoss: 2.404\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 79.9715909090909\tLoss: 7.101\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 71.09375\tLoss: 28.237\n",
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 59.16193181818182\tLoss: 117.603\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 48.4375\tLoss: 401.564\n"
      ]
     }
    ],
