--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20356,7 +20356,11 @@
       "count: 228\tCoord: [0.8 0. ]\t\tAcc: 25.994318181818183\tLoss: 243.267\n",
       "count: 230\tCoord: [1. 0.]\t\tAcc: 18.25284090909091\tLoss: 749.472\n",
       "count: 232\tCoord: [-0.9  0.1]\t\tAcc: 10.227272727272727\tLoss: 60.523\n",
-      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 11.008522727272727\tLoss: 64.372\n"
+      "count: 234\tCoord: [-0.7  0.1]\t\tAcc: 11.008522727272727\tLoss: 64.372\n",
+      "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 12.428977272727273\tLoss: 39.585\n",
+      "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 46.37784090909091\tLoss: 7.471\n",
+      "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 89.0625\tLoss: 0.78\n",
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 88.5653409090909\tLoss: 1.4\n"
      ]
     }
    ],
