--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20397,7 +20397,10 @@
       "count: 168\tCoord: [-1.  -0.2]\t\tAcc: 10.15625\tLoss: 18.101\n",
       "count: 170\tCoord: [-0.8 -0.2]\t\tAcc: 11.71875\tLoss: 13.401\n",
       "count: 172\tCoord: [-0.6 -0.2]\t\tAcc: 12.642045454545455\tLoss: 8.015\n",
-      "Coord: [-0.5 -0.2]\tAcc: 13\tLoss: 7.426\r"
+      "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 14.488636363636363\tLoss: 5.78\n",
+      "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 23.4375\tLoss: 4.154\n",
+      "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 45.88068181818182\tLoss: 4.635\n",
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 44.53125\tLoss: 8.882\n"
      ]
     }
    ],
