--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20360,7 +20360,17 @@
       "count: 236\tCoord: [-0.5  0.1]\t\tAcc: 12.428977272727273\tLoss: 39.585\n",
       "count: 238\tCoord: [-0.3  0.1]\t\tAcc: 46.37784090909091\tLoss: 7.471\n",
       "count: 240\tCoord: [-0.1  0.1]\t\tAcc: 89.0625\tLoss: 0.78\n",
-      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 88.5653409090909\tLoss: 1.4\n"
+      "count: 242\tCoord: [0.1 0.1]\t\tAcc: 88.5653409090909\tLoss: 1.4\n",
+      "count: 244\tCoord: [0.3 0.1]\t\tAcc: 65.98011363636364\tLoss: 13.047\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count: 246\tCoord: [0.5 0.1]\t\tAcc: 47.23011363636363\tLoss: 63.92\n",
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 33.66477272727273\tLoss: 237.324\n",
+      "Coord: [0.8 0.1]\tAcc: 25\tLoss: 455.855\r"
      ]
     }
    ],
