--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20400,7 +20400,10 @@
       "count: 174\tCoord: [-0.4 -0.2]\t\tAcc: 14.488636363636363\tLoss: 5.78\n",
       "count: 176\tCoord: [-0.2 -0.2]\t\tAcc: 23.4375\tLoss: 4.154\n",
       "count: 178\tCoord: [ 0.  -0.2]\t\tAcc: 45.88068181818182\tLoss: 4.635\n",
-      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 44.53125\tLoss: 8.882\n"
+      "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 44.53125\tLoss: 8.882\n",
+      "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 33.73579545454545\tLoss: 12.727\n",
+      "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 21.519886363636363\tLoss: 17.892\n",
+      "Coord: [ 0.7 -0.2]\tAcc: 20\tLoss: 22.446\r"
      ]
     }
    ],
