Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20403,7 +20403,9 @@
       "count: 180\tCoord: [ 0.2 -0.2]\t\tAcc: 44.53125\tLoss: 8.882\n",
       "count: 182\tCoord: [ 0.4 -0.2]\t\tAcc: 33.73579545454545\tLoss: 12.727\n",
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 21.519886363636363\tLoss: 17.892\n",
-      "Coord: [ 0.7 -0.2]\tAcc: 20\tLoss: 22.446\r"
+      "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 15.269886363636363\tLoss: 22.383\n",
+      "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 12.571022727272727\tLoss: 25.244\n",
+      "Coord: [-1.  -0.1]\tAcc: 16\tLoss: 6.359\r"
      ]
     }
    ],
