--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20468,7 +20468,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 48.4375\tLoss: 401.564\n"
+      "count: 248\tCoord: [0.7 0.1]\t\tAcc: 48.4375\tLoss: 401.564\n",
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 40.83806818181818\tLoss: 1170.408\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 12.5\tLoss: 10.314\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 13.707386363636363\tLoss: 10.72\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 20.951704545454547\tLoss: 11.219\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 39.34659090909091\tLoss: 14.608\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 50.63920454545455\tLoss: 27.948\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 52.41477272727273\tLoss: 66.474\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 49.78693181818182\tLoss: 151.329\n"
      ]
     }
    ],
