--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20370,7 +20370,11 @@
      "text": [
       "count: 246\tCoord: [0.5 0.1]\t\tAcc: 47.23011363636363\tLoss: 63.92\n",
       "count: 248\tCoord: [0.7 0.1]\t\tAcc: 33.66477272727273\tLoss: 237.324\n",
-      "Coord: [0.8 0.1]\tAcc: 25\tLoss: 455.855\r"
+      "count: 250\tCoord: [0.9 0.1]\t\tAcc: 23.15340909090909\tLoss: 730.164\n",
+      "count: 252\tCoord: [-1.   0.2]\t\tAcc: 9.801136363636363\tLoss: 139.2\n",
+      "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 8.948863636363637\tLoss: 140.668\n",
+      "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 11.363636363636363\tLoss: 91.435\n",
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 24.147727272727273\tLoss: 33.809\n"
      ]
     }
    ],
