--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20405,7 +20405,9 @@
       "count: 184\tCoord: [ 0.6 -0.2]\t\tAcc: 21.519886363636363\tLoss: 17.892\n",
       "count: 186\tCoord: [ 0.8 -0.2]\t\tAcc: 15.269886363636363\tLoss: 22.383\n",
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 12.571022727272727\tLoss: 25.244\n",
-      "Coord: [-1.  -0.1]\tAcc: 16\tLoss: 6.359\r"
+      "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 8.664772727272727\tLoss: 5.743\n",
+      "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 8.025568181818182\tLoss: 3.874\n",
+      "Coord: [-0.6 -0.1]\tAcc: 12\tLoss: 3.414\r"
      ]
     }
    ],
