Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20374,7 +20374,11 @@
       "count: 252\tCoord: [-1.   0.2]\t\tAcc: 9.801136363636363\tLoss: 139.2\n",
       "count: 254\tCoord: [-0.8  0.2]\t\tAcc: 8.948863636363637\tLoss: 140.668\n",
       "count: 256\tCoord: [-0.6  0.2]\t\tAcc: 11.363636363636363\tLoss: 91.435\n",
-      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 24.147727272727273\tLoss: 33.809\n"
+      "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 24.147727272727273\tLoss: 33.809\n",
+      "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 59.58806818181818\tLoss: 11.154\n",
+      "count: 262\tCoord: [0.  0.2]\t\tAcc: 68.4659090909091\tLoss: 10.854\n",
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 58.59375\tLoss: 31.653\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 45.80965909090909\tLoss: 112.43\n"
      ]
     }
    ],
