--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20407,7 +20407,9 @@
       "count: 188\tCoord: [ 1.  -0.2]\t\tAcc: 12.571022727272727\tLoss: 25.244\n",
       "count: 190\tCoord: [-0.9 -0.1]\t\tAcc: 8.664772727272727\tLoss: 5.743\n",
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 8.025568181818182\tLoss: 3.874\n",
-      "Coord: [-0.6 -0.1]\tAcc: 12\tLoss: 3.414\r"
+      "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 12.5\tLoss: 3.13\n",
+      "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 29.048295454545453\tLoss: 2.621\n",
+      "Coord: [-0.2 -0.1]\tAcc: 68\tLoss: 1.916\r"
      ]
     }
    ],
