--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20409,7 +20409,9 @@
       "count: 192\tCoord: [-0.7 -0.1]\t\tAcc: 8.025568181818182\tLoss: 3.874\n",
       "count: 194\tCoord: [-0.5 -0.1]\t\tAcc: 12.5\tLoss: 3.13\n",
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 29.048295454545453\tLoss: 2.621\n",
-      "Coord: [-0.2 -0.1]\tAcc: 68\tLoss: 1.916\r"
+      "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 74.00568181818181\tLoss: 1.119\n",
+      "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 86.07954545454545\tLoss: 0.934\n",
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 73.50852272727273\tLoss: 2.544\n"
      ]
     }
    ],
