Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20378,7 +20378,12 @@
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 59.58806818181818\tLoss: 11.154\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 68.4659090909091\tLoss: 10.854\n",
       "count: 264\tCoord: [0.2 0.2]\t\tAcc: 58.59375\tLoss: 31.653\n",
-      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 45.80965909090909\tLoss: 112.43\n"
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 45.80965909090909\tLoss: 112.43\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 34.87215909090909\tLoss: 367.597\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 25.0\tLoss: 1041.637\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 20.02840909090909\tLoss: 2601.107\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 9.303977272727273\tLoss: 240.439\n",
+      "Coord: [-0.8  0.3]\tAcc: 8\tLoss: 236.3271\r"
      ]
     }
    ],
