Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20476,7 +20476,16 @@
       "count: 258\tCoord: [-0.4  0.2]\t\tAcc: 39.34659090909091\tLoss: 14.608\n",
       "count: 260\tCoord: [-0.2  0.2]\t\tAcc: 50.63920454545455\tLoss: 27.948\n",
       "count: 262\tCoord: [0.  0.2]\t\tAcc: 52.41477272727273\tLoss: 66.474\n",
-      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 49.78693181818182\tLoss: 151.329\n"
+      "count: 264\tCoord: [0.2 0.2]\t\tAcc: 49.78693181818182\tLoss: 151.329\n",
+      "count: 266\tCoord: [0.4 0.2]\t\tAcc: 44.10511363636363\tLoss: 348.074\n",
+      "count: 268\tCoord: [0.6 0.2]\t\tAcc: 39.55965909090909\tLoss: 817.555\n",
+      "count: 270\tCoord: [0.8 0.2]\t\tAcc: 34.80113636363637\tLoss: 1901.164\n",
+      "count: 272\tCoord: [1.  0.2]\t\tAcc: 32.24431818181818\tLoss: 4223.454\n",
+      "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 12.002840909090908\tLoss: 33.41\n",
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 19.176136363636363\tLoss: 37.003\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 28.62215909090909\tLoss: 75.626\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 34.30397727272727\tLoss: 180.401\n",
+      "Coord: [-0.2  0.3]\tAcc: 29\tLoss: 351.545\r"
      ]
     }
    ],
