Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20411,7 +20411,9 @@
       "count: 196\tCoord: [-0.3 -0.1]\t\tAcc: 29.048295454545453\tLoss: 2.621\n",
       "count: 198\tCoord: [-0.1 -0.1]\t\tAcc: 74.00568181818181\tLoss: 1.119\n",
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 86.07954545454545\tLoss: 0.934\n",
-      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 73.50852272727273\tLoss: 2.544\n"
+      "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 73.50852272727273\tLoss: 2.544\n",
+      "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 51.84659090909091\tLoss: 5.92\n",
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 33.73579545454545\tLoss: 9.55\n"
      ]
     }
    ],
