--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20383,7 +20383,10 @@
       "count: 270\tCoord: [0.8 0.2]\t\tAcc: 25.0\tLoss: 1041.637\n",
       "count: 272\tCoord: [1.  0.2]\t\tAcc: 20.02840909090909\tLoss: 2601.107\n",
       "count: 274\tCoord: [-0.9  0.3]\t\tAcc: 9.303977272727273\tLoss: 240.439\n",
-      "Coord: [-0.8  0.3]\tAcc: 8\tLoss: 236.3271\r"
+      "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 10.440340909090908\tLoss: 167.993\n",
+      "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 14.701704545454545\tLoss: 89.276\n",
+      "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 29.40340909090909\tLoss: 53.89\n",
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 40.625\tLoss: 54.888\n"
      ]
     }
    ],
