--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20413,7 +20413,9 @@
       "count: 200\tCoord: [ 0.1 -0.1]\t\tAcc: 86.07954545454545\tLoss: 0.934\n",
       "count: 202\tCoord: [ 0.3 -0.1]\t\tAcc: 73.50852272727273\tLoss: 2.544\n",
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 51.84659090909091\tLoss: 5.92\n",
-      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 33.73579545454545\tLoss: 9.55\n"
+      "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 33.73579545454545\tLoss: 9.55\n",
+      "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 23.579545454545453\tLoss: 12.437\n",
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 11.008522727272727\tLoss: 3.213\n"
      ]
     }
    ],
