--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20415,7 +20415,9 @@
       "count: 204\tCoord: [ 0.5 -0.1]\t\tAcc: 51.84659090909091\tLoss: 5.92\n",
       "count: 206\tCoord: [ 0.7 -0.1]\t\tAcc: 33.73579545454545\tLoss: 9.55\n",
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 23.579545454545453\tLoss: 12.437\n",
-      "count: 210\tCoord: [-1.  0.]\t\tAcc: 11.008522727272727\tLoss: 3.213\n"
+      "count: 210\tCoord: [-1.  0.]\t\tAcc: 11.008522727272727\tLoss: 3.213\n",
+      "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 10.582386363636363\tLoss: 2.885\n",
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 15.340909090909092\tLoss: 2.556\n"
      ]
     }
    ],
