Super important commit

--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20386,7 +20386,12 @@
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 10.440340909090908\tLoss: 167.993\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 14.701704545454545\tLoss: 89.276\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 29.40340909090909\tLoss: 53.89\n",
-      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 40.625\tLoss: 54.888\n"
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 40.625\tLoss: 54.888\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 39.41761363636363\tLoss: 111.136\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 34.58806818181818\tLoss: 304.804\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 28.267045454545453\tLoss: 826.177\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 23.366477272727273\tLoss: 2046.058\n",
+      "Coord: [0.8 0.3]\tAcc: 23\tLoss: 3247.518\r"
      ]
     }
    ],
