Super important commit

--- a/Loss LanScape/1. Relu no normalization .ipynb
+++ b/Loss LanScape/1. Relu no normalization .ipynb
@@ -20485,7 +20485,15 @@
       "count: 276\tCoord: [-0.7  0.3]\t\tAcc: 19.176136363636363\tLoss: 37.003\n",
       "count: 278\tCoord: [-0.5  0.3]\t\tAcc: 28.62215909090909\tLoss: 75.626\n",
       "count: 280\tCoord: [-0.3  0.3]\t\tAcc: 34.30397727272727\tLoss: 180.401\n",
-      "Coord: [-0.2  0.3]\tAcc: 29\tLoss: 351.545\r"
+      "count: 282\tCoord: [-0.1  0.3]\t\tAcc: 34.80113636363637\tLoss: 367.242\n",
+      "count: 284\tCoord: [0.1 0.3]\t\tAcc: 33.87784090909091\tLoss: 669.049\n",
+      "count: 286\tCoord: [0.3 0.3]\t\tAcc: 31.960227272727273\tLoss: 1214.971\n",
+      "count: 288\tCoord: [0.5 0.3]\t\tAcc: 30.255681818181817\tLoss: 2221.923\n",
+      "count: 290\tCoord: [0.7 0.3]\t\tAcc: 27.62784090909091\tLoss: 4205.774\n",
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 26.349431818181817\tLoss: 8022.794\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 12.073863636363637\tLoss: 74.008\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 16.974431818181817\tLoss: 102.759\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 21.022727272727273\tLoss: 496.843\n"
      ]
     }
    ],
