--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20417,7 +20417,10 @@
       "count: 208\tCoord: [ 0.9 -0.1]\t\tAcc: 23.579545454545453\tLoss: 12.437\n",
       "count: 210\tCoord: [-1.  0.]\t\tAcc: 11.008522727272727\tLoss: 3.213\n",
       "count: 212\tCoord: [-0.8  0. ]\t\tAcc: 10.582386363636363\tLoss: 2.885\n",
-      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 15.340909090909092\tLoss: 2.556\n"
+      "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 15.340909090909092\tLoss: 2.556\n",
+      "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 37.57102272727273\tLoss: 2.152\n",
+      "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 78.76420454545455\tLoss: 0.759\n",
+      "Coord: [-0.1  0. ]\tAcc: 121\tLoss: 0.287\r"
      ]
     }
    ],
