Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20420,7 +20420,9 @@
       "count: 214\tCoord: [-0.6  0. ]\t\tAcc: 15.340909090909092\tLoss: 2.556\n",
       "count: 216\tCoord: [-0.4  0. ]\t\tAcc: 37.57102272727273\tLoss: 2.152\n",
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 78.76420454545455\tLoss: 0.759\n",
-      "Coord: [-0.1  0. ]\tAcc: 121\tLoss: 0.287\r"
+      "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
+      "count: 222\tCoord: [0.2 0. ]\t\tAcc: 93.4659090909091\tLoss: 0.375\n",
+      "Coord: [0.3 0. ]\tAcc: 111\tLoss: 0.602\r"
      ]
     }
    ],
