--- a/Loss LanScape/2.  Relu BN.ipynb
+++ b/Loss LanScape/2.  Relu BN.ipynb
@@ -20391,7 +20391,11 @@
       "count: 286\tCoord: [0.3 0.3]\t\tAcc: 34.58806818181818\tLoss: 304.804\n",
       "count: 288\tCoord: [0.5 0.3]\t\tAcc: 28.267045454545453\tLoss: 826.177\n",
       "count: 290\tCoord: [0.7 0.3]\t\tAcc: 23.366477272727273\tLoss: 2046.058\n",
-      "Coord: [0.8 0.3]\tAcc: 23\tLoss: 3247.518\r"
+      "count: 292\tCoord: [0.9 0.3]\t\tAcc: 19.53125\tLoss: 4611.743\n",
+      "count: 294\tCoord: [-1.   0.4]\t\tAcc: 9.019886363636363\tLoss: 342.368\n",
+      "count: 296\tCoord: [-0.8  0.4]\t\tAcc: 10.653409090909092\tLoss: 259.361\n",
+      "count: 298\tCoord: [-0.6  0.4]\t\tAcc: 11.647727272727273\tLoss: 170.632\n",
+      "Coord: [-0.5  0.4]\tAcc: 14\tLoss: 161.781\r"
      ]
     }
    ],
