Super important commit

--- a/Loss LanScape/3. Relu LocalRN.ipynb
+++ b/Loss LanScape/3. Relu LocalRN.ipynb
@@ -20422,7 +20422,9 @@
       "count: 218\tCoord: [-0.2  0. ]\t\tAcc: 78.76420454545455\tLoss: 0.759\n",
       "count: 220\tCoord: [0. 0.]\t\tAcc: 98.57954545454545\tLoss: 0.043\n",
       "count: 222\tCoord: [0.2 0. ]\t\tAcc: 93.4659090909091\tLoss: 0.375\n",
-      "Coord: [0.3 0. ]\tAcc: 111\tLoss: 0.602\r"
+      "count: 224\tCoord: [0.4 0. ]\t\tAcc: 75.42613636363636\tLoss: 1.904\n",
+      "count: 226\tCoord: [0.6 0. ]\t\tAcc: 56.60511363636363\tLoss: 4.162\n",
+      "Coord: [0.8 0. ]\tAcc: 48\tLoss: 7.768\r"
      ]
     }
    ],
